fixing nav menu when open - ad should not be covering it!

--- a/static/src/stylesheets/module/_adslot.scss
+++ b/static/src/stylesheets/module/_adslot.scss
@@ -74,7 +74,11 @@
 
     &:not(.top-banner-ad-container--not-sticky) {
         position: sticky;
-        z-index: $zindex-sticky-top-banner;
+        z-index: $zindex-sticky;
+
+        @include mq(desktop) {
+            z-index: $zindex-sticky-top-banner;
+        }
     }
 }
 
